reintroduced pagination buttons

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "./Shared/_Layout.cshtml";
+    ViewData["Location"] = "";
 }
 
 <h2> Public Timeline </h2>
