--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -40,3 +40,53 @@ button {
     text-decoration: none;
     cursor: pointer;
 }
+
+header, .brand {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    left: 0;
+    gap: 20px;
+    margin-left: 10px;
+    margin-block: 0;
+}
+
+/*USED FOR THE BIRDS SIZE*/
+#icon{
+    display: flex;
+    cursor: pointer;
+    width: 60px;
+    height: 55px;
+    justify-content: center;
+    margin-inline: 0;
+}
+
+.title {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    top: 0;
+    background-color: gray;
+    position: fixed;
+    font-size: 20px;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.pagelist{
+    display: flex;
+    border: 1.5px solid rgba(175, 175, 175, 0.748);
+    padding: 7px;
+    font-size: 10px;
+    justify-content: space-between;
+    align-items: center; 
+    border-radius: 10px;
+    width: 200px;
+    background: white;
+    justify-self: center;
+}
+
+#current{
+    background: rgb(64, 144, 205);
+}
