new migrations added + _LoginPartial

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -37,12 +37,13 @@
                 
             </div>
         </form>
+        <div class = "login">
+        <partial name="_LoginPartial" />
+        </div>
 
-        <div class = "login"> Log in</div>
     </h1>
     
     @if(true){
-
     }
 
     <div class=page>
