css almost done

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -17,102 +17,94 @@
         </header>
         
         <nav>
+            
+            <div class="nav-tags">
+                @Model.tag("Public timeline","/assets/home.png","/")
+                @Model.tag("My timeline","./assets/user.png","")
+            </div>
 
-            @Model.tag("Public timeline","/assets/home.png","/")
-            @Model.tag("My timeline","./assets/user.png","")
+            <div class="navigation">
+                <!-- Defines the 'prev' button which will function as a way to go to the
+                previous page by clicking on it-->
+                @if(Model.CurrentPage != 0){
+                    <a href="?page=@Model.PreviousPage">
+                        <button class="nav-arrow">
+                            <img src="/assets/arrow.png" class="arrow" id="left" />
+                        </button>
+                    </a>
+                }
 
-            <!-- Defines the 'pagelist' which will function as a way to navigate
-            simply by using numbers in the bottom of a page-->
-            <ul class="pagelist">
-                @for(int i = 0; i <= Model.Count / 32; i++){
-                    if(Model.CurrentPage == 0){
-                        if(i > Model.CurrentPage + 3){
-                            if(i == Model.LastPage){
-                                <fill>..</fill>
+                <!-- Defines the 'pagelist' which will function as a way to navigate
+                simply by using numbers in the bottom of a page-->
+                <ul class="pagelist">
+                    @for(int i = 0; i <= Model.Count / 32; i++){
+                        if(Model.CurrentPage == 0){
+                            if(i > Model.CurrentPage + 3){
+                                if(i == Model.LastPage){
+                                    <fill>..</fill>
+                                    <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                                }
+                            } else if(Model.CurrentPage == i){
+                                <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                            }else{
                                 <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
                             }
-                        } else if(Model.CurrentPage == i){
-                            <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                        }else{
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                        }
 
 
 
-                    }else if (Model.CurrentPage == Model.LastPage){
-                        if(i < Model.CurrentPage - 3){
-                            if(i == 0){
-                                <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                                <fill>..</fill>
-                            }
-                        } else if(Model.CurrentPage == i){
-                            <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                        }else{
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                        }
-
-
-
-                    }else{
-                        if(i > Model.CurrentPage + 2 || i < Model.CurrentPage -2){
-                            if(i == Model.LastPage){
-                                if(Model.CurrentPage + 3 < Model.LastPage){
+                        }else if (Model.CurrentPage == Model.LastPage){
+                            if(i < Model.CurrentPage - 3){
+                                if(i == 0){
+                                    <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
                                     <fill>..</fill>
                                 }
+                            } else if(Model.CurrentPage == i){
+                                <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                            }else{
                                 <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-
-                            } else if(i == 0){
-                                <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                                if(Model.CurrentPage - 3 > 0){
-                                    <fill>..</fill>
-                                }
                             }
-                        } else if(Model.CurrentPage == i){
-                            <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
-                        } else{
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+
+
+
+                        }else{
+                            if(i > Model.CurrentPage + 2 || i < Model.CurrentPage -2){
+                                if(i == Model.LastPage){
+                                    if(Model.CurrentPage + 3 < Model.LastPage){
+                                        <fill>..</fill>
+                                    }
+                                    <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+
+                                } else if(i == 0){
+                                    <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                                    if(Model.CurrentPage - 3 > 0){
+                                        <fill>..</fill>
+                                    }
+                                }
+                            } else if(Model.CurrentPage == i){
+                                <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                            } else{
+                                <li onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                            }
                         }
                     }
+                </ul>
+                
+                <!-- Defines the 'next' button which will function as a way to go to the
+                next page by clicking on it-->
+                @if(Model.CurrentPage != Model.LastPage){
+                    <a href="?page=@Model.NextPage">
+                        <button class="nav-arrow">
+                            <img src="/assets/arrow.png" class="arrow" id="right" />
+                        </button>
+                    </a>
                 }
-            </ul>
-            <div class = "buttons">
-        <!-- Defines the 'prev' button which will function as a way to go to the
-        previous page by clicking on it-->
-        @if(Model.CurrentPage != 0){
-            <a href = "?page=@Model.PreviousPage">
-                <button class = "left" id = "button"> 
-                    <img src="/images/arrow.png" class = "arrowRight"/>
-                </button>
-            </a>
-        }else{
-            <button class = "left" id = "limit"> 
-                <img src="/images/arrow.png" class = "arrowRight"/>
-            </button>
-        }
-
-        <!-- Defines the 'next' button which will function as a way to go to the
-        next page by clicking on it-->
-        @if(Model.CurrentPage != Model.LastPage){
-            <a href = "?page=@Model.NextPage">
-                <button class = "right" id = "button">
-                    <img src="/images/arrow.png" class = "arrow"/>
-                </button>
-            </a>
-        } else{
-            <button class = "right" id = "limit">
-                <img src="/images/arrow.png" class = "arrow"/>
-            </button>
-        }
-        </div>
+            </div>
         </nav>
     </div>
-
     
     <main class="cheep-container">
         @RenderBody()
     </main>
-
-    
 
 </body>
 
