--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -7,7 +7,7 @@
     ViewData["Location"] = "";
 }
 
-<h2> Public Timeline </h2>
+<h2 class="name-timeline"> Public Timeline </h2>
 
 @if (Model.Cheeps.Any())
 {   
