--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -6,21 +6,6 @@ body {
     place-items: center;
 }
 
-nav {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-top: 10px;
-}
-
-header {
-    display: flex; 
-    width: 100%;
-    flex-direction: row;
-    margin: 0;
-    top: 0;
-}
-
 a {
     font-weight: 500;
     color: #4b1515;
@@ -28,17 +13,55 @@ a {
     text-decoration: inherit;
 }
 
-a:hover {
-    color: rgb(64, 144, 205);
+header {
+    display: flex; 
+    width: 100%;
+    flex-direction: row;
+    margin: 0;
+    margin-left: 0;
+    border-bottom: 2px solid #4b1515;
+    padding: 20px;
 }
 
-/*IS USED FOR THE SIZES OF THE BUTTONS AND MORE*/
-button {
-    border: none;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
+nav {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+}
+
+.navigation {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    margin-right: 20px;
+}
+
+.title {
+    width: 100%;
+    display: flex;
+    top: 0;
+    background-color: gray;
+    position: fixed;
+    font-size: 20px;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-bottom: 2px solid #4b1515;
+}
+
+.nav-tags {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-left: 20px;
+}
+
+a:hover {
+    color: rgb(64, 144, 205);
 }
 
 header, .brand {
@@ -61,19 +84,6 @@ header, .brand {
     margin-inline: 0;
 }
 
-.title {
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    top: 0;
-    background-color: gray;
-    position: fixed;
-    font-size: 20px;
-    flex-direction: column;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
 .pagelist{
     display: flex;
     border: 1.5px solid rgba(175, 175, 175, 0.748);
@@ -84,9 +94,33 @@ header, .brand {
     border-radius: 10px;
     width: 200px;
     background: white;
-    justify-self: center;
+
 }
 
 #current{
     background: rgb(64, 144, 205);
+}
+
+/*IS USED FOR THE SIZES OF THE BUTTONS AND MORE*/
+button {
+    border: none;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.nav-arrow {
+    border-radius: 100px;
+    flex-direction: row;
+    align-items: center;
+}
+
+#left, #right {
+    height: 10px;
+    width: 10px;
+}
+
+#left {
+    transform: rotate(180deg);
 }
