--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
         <nav>
             
             <div class="nav-tags">
-                @Model.tag("Public timeline","/assets/home.png","/")
-                @Model.tag("My timeline","./assets/user.png","")
+                @Model.Tag("Public timeline","/assets/home.png","/")
+                @Model.Tag("My timeline","./assets/user.png","")
             </div>
 
             <div class="navigation">
