Added login and register functionality to the website CO-Authors: ChatGPT - @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -37,8 +37,9 @@
                 
             </div>
         </form>
+
         <div class = "login">
-        <partial name="_LoginPartial" />
+           @await Html.PartialAsync("_LoginPartial")
         </div>
 
     </h1>
