--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @using Chirp.Repositories;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-    <p style="color: red;">_LoginPartial is rendering</p> <!-- Test message -->
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
@@ -16,16 +16,12 @@
       asp-route-returnUrl="@Url.Page("/", new { area = "" })"
       asp-area="Identity" method="post" >
         <button  class="nav-link btn btn-link text-dark"
-          type="submit">Logout</button>
+          type="submit">Logout </button>
         </form>
     </li>
 } else {
   <li class="nav-item">
     <a class="nav-link text-dark" asp-area="Identity"
-      asp-page="/Account/Register">Register</a>
+   asp-page="/Account/Login">Login</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link text-dark" asp-area="Identity"
-      asp-page="/Account/Login">Login</a>
-  </li>
-} </ul>
+} </ul> 
