--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -581,13 +581,21 @@ fill{
 }
 
 .login{
-  position: relative;
-  display:flex;
-  font-size: 20px;
-  justify-self: right;
+  display: flex;
+  font-size: 50px;
   letter-spacing: 0px;
   cursor: pointer;
+  width: 100px;
+  height: 20px;
   z-index: 999;
+  justify-self: right;
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.login ul{
+  list-style-type: none;
 }
 
 .navbar ul li{
