--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -20,7 +20,6 @@ header {
     margin: 0;
     margin-left: 0;
     border-bottom: 2px solid #4b1515;
-    padding: 20px;
 }
 
 nav {
@@ -64,7 +63,7 @@ a:hover {
     color: rgb(64, 144, 205);
 }
 
-header, .brand {
+header, .brand-container {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -123,4 +122,39 @@ button {
 
 #left {
     transform: rotate(180deg);
+}
+
+footer {
+    display: flex;
+    position: fixed;
+    flex-direction: row;
+    width: 100%;
+    bottom: 0;
+    justify-items: center;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.post {
+    display: flex;
+    padding: 2.5px;
+    background-color: gray;
+    align-items: center;
+    margin: 10px;
+    border-radius: 100%;
+    border: #4b151541 solid;
+}
+
+.post:hover {
+    cursor: pointer;
+}
+
+.post #post-button {
+    transform: rotate(0deg);
+    transition: transform 0.3s ease;
+    height: 20px;
+    width: 20px;
+    border: unset;
 }
