--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -139,9 +139,10 @@ footer {
 
 .post {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 2.5px;
     background-color: gray;
-    align-items: center;
     margin: 10px;
     border-radius: 100%;
     border: #4b151541 solid;
@@ -157,4 +158,27 @@ footer {
     height: 20px;
     width: 20px;
     border: unset;
+}
+
+#post {
+    visibility: hidden;
+}
+
+.cheep-post-form {
+    bottom: 80px;   
+    right: 10px;
+    position: fixed;
+    background-color: whitesmoke;
+    padding-inline: 100px;
+    padding-block: 75px;
+    border: 1px solid #4b1515;
+    visibility: hidden;
+    z-index: 1000;
+}
+
+.cheep-post-label {
+    display: flex;
+    align-self: flex-start;
+    flex-direction: column;
+    gap: 5px;
 }
