--- a/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <div class="cheep-item">
-        <strong class="cheep-author">  <a href="/@Model.Author">@Model.Author</a> </strong>
+        <strong class="cheep-author">  <a href="/users/@Model.Author">@Model.Author</a> </strong>
 
         <p class="cheep-body"> @Model.Body </p>
 
