--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/{author}"
+﻿@page "/users/{author}"
 @using Chirp.Web.models
 @model Chirp.Web.models.UserTimelineModel
 @{
@@ -8,11 +8,16 @@
     ViewData["Location"] = $@"{routeName}";
 }
 
+@await Html.PartialAsync("_Nav", new NavPartialView {
+    Count = @Model.Count,
+    NextPage = @Model.NextPage,
+    PreviousPage = @Model.PreviousPage,
+    CurrentPage = @Model.CurrentPage,
+    LastPage = @Model.LastPage,
+    SearchName = @Model.SearchName
+})
 
 <h2 class="name-timeline"> @routeName's Timeline </h2>
-
-
-
 @if (Model.Cheeps.Any())
 {
     @foreach (var cheep in Model.Cheeps)
