--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -43,3 +43,49 @@ h2, .name-timeline {
   text-decoration: underline;
   cursor: pointer;
 }
+
+nav {
+  position: fixed;
+  top: 90px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  left: 0;
+  background-color: gray;
+  border-bottom: 2px solid #4b1515;
+  border-top: 2px solid #4b1515;
+
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  margin-right: 20px;
+}
+
+.nav-tags {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-left: 20px;
+}
+
+.nav-arrow {
+  border-radius: 100px;
+  flex-direction: row;
+  align-items: center;
+}
+
+#left, #right {
+  height: 10px;
+  width: 10px;
+}
+
+#left {
+  transform: rotate(180deg);
+}
