it works again including img src's for all the buttons

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
 
             <button class="post" onclick=rotate()>
-                <img src="assets/post.png" class="post" id="post-button"/>
+                <img src="/assets/post.png" class="post" id="post-button"/>
             </button>
         </footer>
 
