--- a/src/Chirp.Web/Pages/Shared/_Imports.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Imports.cshtml
@@ -2,4 +2,5 @@
     <title>@ViewData["Title"]</title>
     <link href="/css/style.css" rel="stylesheet" />
     <link href="/css/index.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/assets/icon1.png" />
 </head>
