--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -4,6 +4,12 @@ body {
     display: flex;
     flex-direction: column;
     place-items: center;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 a {
@@ -15,23 +21,26 @@ a {
 
 header {
     display: flex; 
+    justify-content: space-between;
     width: 100%;
     flex-direction: row;
-    margin: 0;
-    margin-left: 0;
     border-bottom: 2px solid #4b1515;
 }
 
+.searchbar {
+    display: flex;
+}
 
+#search {
+    width: 200px;
+}
 
 .title {
     width: 100%;
-    display: flex;
     top: 0;
     background-color: gray;
     position: fixed;
     font-size: 20px;
-    flex-direction: column;
     margin-left: 20px;
     margin-right: 20px;
 }
@@ -41,13 +50,13 @@ a:hover {
 }
 
 header, .brand-container {
+    margin-right: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     left: 0;
     gap: 20px;
-    margin-left: 10px;
-    margin-block: 0;
+    padding-left: 20px;
 }
 
 /*USED FOR THE BIRDS SIZE*/
@@ -118,16 +127,30 @@ footer {
     right: 10px;
     position: fixed;
     background-color: whitesmoke;
-    padding-inline: 100px;
-    padding-block: 75px;
     border: 1px solid #4b1515;
     visibility: hidden;
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+    height: 100px;
+    width: 400px;
+    border-radius: 20px;
 }
 
-.cheep-post-label {
-    display: flex;
-    align-self: flex-start;
-    flex-direction: column;
-    gap: 5px;
+#post-input {
+    height: 100%;
+    text-align:left;
+    align-items: flex-start;
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.post-placeholder {
+    position: absolute;
+    top: 60px;
+    left: 40px;
+    color: #4b15155e;
+    transition: top 0.3s ease, opacity 0.3s ease; /* Thank you ChatGPT */
 }
