--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -60,6 +60,12 @@ nav {
 
 }
 
+@media only screen and ( min-width: 500px ) {
+  nav {
+    
+  }
+}
+
 .navigation {
   display: flex;
   flex-direction: row;
