pagination refactor complete

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -7,14 +7,7 @@
     ViewData["Location"] = "";
 }
 
-@await Html.PartialAsync("_Nav", new NavPartialView {
-    Count = @Model.Count,
-    NextPage = @Model.NextPage,
-    PreviousPage = @Model.PreviousPage,
-    CurrentPage = @Model.CurrentPage,
-    LastPage = @Model.LastPage,
-    SearchName = @Model.SearchName
-})
+@await Html.PartialAsync("_Nav")
 
 <h2 class="name-timeline"> Public Timeline </h2>
 
