--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -1,4 +1,3 @@
-@model Chirp.Web.models.NavPartialView
 
 <nav>
                 
@@ -93,9 +92,12 @@
             }
         </ul>
         
+        
+
         <!-- Defines the 'next' button which will function as a way to go to the
         next page by clicking on it-->
         @if(Model.CurrentPage != Model.LastPage){
+            
             <a href="?page=@Model.NextPage">
                 <button class="nav-arrow">
                     <img src="/assets/arrow.png" class="arrow" id="right" />
@@ -104,3 +106,9 @@
         }
     </div>
 </nav>
+
+<script>
+    function debug(){
+        console.log("im working")
+    }
+</script>
