--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -8,7 +8,7 @@ body {
 
 a {
     font-weight: 500;
-    color: #4b1515;
+    color: black;
 
     text-decoration: inherit;
 }
@@ -58,6 +58,7 @@ nav {
     flex-direction: row;
     gap: 20px;
     margin-left: 20px;
+    cursor: pointer;
 }
 
 a:hover {
@@ -82,6 +83,10 @@ header, .brand {
     height: 55px;
     justify-content: center;
     margin-inline: 0;
+}
+
+.nav-item{
+    color: black;
 }
 
 .pagelist{
