--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-<ul class="navbar-nav">
+<div class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
   <li class="nav-item">
@@ -20,8 +20,8 @@
         </form>
     </li>
 } else {
-  <li class="nav-item">
+  <div class="nav-item">
     <a class="nav-link text-dark" asp-area="Identity"
    asp-page="/Account/Login">Login</a>
-  </li>
-} </ul> 
+  </div>
+} </div> 
