Added demo version of Oauth Co-Authored-By: Símun Larsson Løkke Rasmussen <simra@itu.dk>

--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -19,6 +19,10 @@
             />
             My timeline
         </div>
+
+            <partial name="_LoginPartial" />
+            @await Html.PartialAsync("_LoginPartial")
+
     </div>
 
     <form class="searchbar" name="search"">
