--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -25,7 +25,7 @@
 
     </div>
 
-    <form class="searchbar" name="search"">
+    <form class="searchbar" name="search">
         <input id="search" type="search" />
         <div class="results">
             
