Added the Identity UI pages to the program, so they can now be edited.

--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -21,7 +21,6 @@
     </li>
 } else {
   <div class="nav-item">
-    <a class="nav-link text-dark" asp-area="Identity"
-   asp-page="/Account/Login">Login</a>
+     <a asp-area="Identity" asp-page="/Account/Login">Log in</a>
   </div>
 } </div> 
