--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                 
             }
         </script>
-        
+        @RenderSection("Scripts", required: false)
     </body>
 </html>
 
