--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -87,17 +87,12 @@ button {
 footer {
     display: flex;
     position: fixed;
-    flex-direction: row;
+    flex-direction: row-reverse;
     width: 100%;
     bottom: 0;
-    justify-items: center;
-    justify-content: space-between;
-    align-items: baseline;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
-.post {
+.footer-button {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,16 +103,18 @@ footer {
     border: #4b151541 solid;
 }
 
-.post:hover {
+.footer-button-image {
+    width: 30px;
+    padding: 10px;
+}
+
+.footer-button:hover {
     cursor: pointer;
 }
 
-.post #post-button {
+.footer-button #post-button {
     transform: rotate(0deg);
     transition: transform 0.3s ease;
-    height: 20px;
-    width: 20px;
-    border: unset;
 }
 
 #post {
