so it doesnt get saved in the db, but frontend seems to work

--- a/src/Chirp.Web/Pages/Shared/_Post.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Post.cshtml
@@ -27,15 +27,18 @@
                         "Content-Type": "application/json",
                         "RequestVerificationToken": antiforgeryToken
                     },
-                    body: JSON.stringify({ postString: postInput.value })
+                    body: JSON.stringify({ 
+                        postName: "Helge",
+                        postString: postInput.value 
+                    })
                 })
                 .then(response => response.json())
-                .then(data => {
-                    console.log("Response from server:", data);
-                    toggleVisibility();
-                })
+                .then(
+                    postInput.value = `${postInput.value} [succes]`
+                )
                 .catch(error => {
                     console.error("Error:", error);
+                    postInput.value = `${postInput.value} [failure]`
                 });
             }
         });
