--- a/src/Chirp.Web/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/src/Chirp.Web/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -18,9 +18,15 @@
     <div class="col-md-4">
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+             <div class="form-floating mb-3">
+                <input asp-for="Input.Name" class="form-control" autocomplete="username" aria-required="true" placeholder="Bob" />
+                <label asp-for="Input.Name"> Name</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <br>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="email" placeholder="Please enter your email."/>
-                <label asp-for="Input.Email" class="form-label"></label>
+                <label asp-for="Input.Email" class="form-label"> Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
