--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -20,8 +20,9 @@
 
         <footer>
             @await Html.PartialAsync("_Post")
+            @await Html.PartialAsync("_Search")
         </footer>
-        
+        <script src="~/js/main.js"></script>
     </body>
 </html>
 
