--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -153,3 +153,32 @@ footer {
     color: #4b15155e;
     transition: top 0.3s ease, opacity 0.3s ease; /* Thank you ChatGPT */
 }
+
+.search-form {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 20px;
+    background-color: rgba(245, 245, 245, 0.629);
+    backdrop-filter: blur(5px);
+    visibility: hidden;
+  }
+  
+  #search-input {
+    border-radius: 20px;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .search-placeholder{
+    position: absolute;
+    top: 22px;
+    transition: top 0.3s ease, opacity 0.3s ease; /* Thank you ChatGPT */
+    color: #4b15155e;
+  }
